fix: sonarqube quality issues (#134)